test_files/bad/double_then_2.ru
if a and C or D then E and F then G